// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`copyTask > given a file path > can copy it > stdout 1`] = `
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/copy-task/__temp__/__{hash}__/nadle.config.ts

[log] <Yellow>></Yellow> Task <Bold>copyFoo</BoldDim> <Yellow>STARTED</Yellow>

[log] copy foo.txt -> dist
[log] 
<Green>✓</Green> Task <Bold>copyFoo</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log] 
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>1</BoldDim> task executed
`;

exports[`copyTask > given a folder path > can copy it > stdout 1`] = `
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/copy-task/__temp__/__{hash}__/nadle.config.ts

[log] <Yellow>></Yellow> Task <Bold>copyAssets</BoldDim> <Yellow>STARTED</Yellow>

[log] copy assets/bar.txt -> dist/bar.txt
[log] copy assets/sub/baz.txt -> dist/sub/baz.txt
[log] 
<Green>✓</Green> Task <Bold>copyAssets</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log] 
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>1</BoldDim> task executed
`;

exports[`copyTask > given a folder path > can copy it > stdout 2`] = `
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/copy-task/__temp__/__{hash}__/nadle.config.ts

[log] <Yellow>></Yellow> Task <Bold>copyAssets</BoldDim> <Yellow>STARTED</Yellow>

[log] copy assets/bar.txt -> dist/bar.txt
[log] copy assets/sub/baz.txt -> dist/sub/baz.txt
[log] 
<Green>✓</Green> Task <Bold>copyAssets</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log] 
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>1</BoldDim> task executed
`;

exports[`copyTask > given a nested destination > creates directories automatically > stdout 1`] = `
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/copy-task/__temp__/__{hash}__/nadle.config.ts

[log] <Yellow>></Yellow> Task <Bold>copyToNested</BoldDim> <Yellow>STARTED</Yellow>

[log] copy foo.txt -> dist/sub/nested
[log] 
<Green>✓</Green> Task <Bold>copyToNested</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log] 
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>1</BoldDim> task executed
`;

exports[`copyTask > with include and exclude options > copies only matching files > stdout 1`] = `
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/copy-task/__temp__/__{hash}__/nadle.config.ts

[log] <Yellow>></Yellow> Task <Bold>copyWithFilter</BoldDim> <Yellow>STARTED</Yellow>

[log] copy assets/sub/baz.txt -> dist/sub/baz.txt
[log] 
<Green>✓</Green> Task <Bold>copyWithFilter</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log] 
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>1</BoldDim> task executed
`;
